--- a/Hipotezy.Rmd
+++ b/Hipotezy.Rmd
@@ -36,6 +36,7 @@ library(tables)
 library(Hmisc)
 library(tinytex)
 library(plotly)
+library(plotrix)
 
 colf <- colorRampPalette(c("white","royalblue"))
 ```
@@ -181,6 +182,7 @@ par(mfrow=c(1,1))
 
 ```{r hipoteza 1 tabelka}
 ttab <- prop.table(table(dane$upokorzenie, dane$jakosc_snu), margin = 2)*100
+ttab_round <- round(ttab,2)
  tabelka <- tabular((Upokorzenie = dane$upokorzenie)~  Format(digits =2)*(`Jakość snu` = dane$jakosc_snu)*Heading()*Percent("col"))
 
 ```
@@ -201,7 +203,7 @@ ttab <- prop.table(table(dane$upokorzenie, dane$jakosc_snu), margin = 2)*100
 
 ```{r hipoteza 1 barplot}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
-barplot(ttab,
+bar <- barplot(ttab,
         main = "Odczuwanie upokorzenia w zależności od jakości snu",
         xlab="Jakość snu",
         ylab="Procentowy rozkład poczucia upokorzenia",
@@ -213,6 +215,7 @@ legend("topright",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
        fill = colf(7),
        cex=0.9)
+barlabels(bar, ttab_round)
 ```
 
 
@@ -259,8 +262,9 @@ tabelka <- tabular((`Poczucie radości` = dane$radosc)~  Format(digits =2)*(`Jak
 ```{r hipoteza 2 barplot}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 ttab <- prop.table(table(dane$radosc, dane$dieta), margin = 2)*100
+ttab_round <- round(ttab, 2)
 
-barplot(ttab,
+bar <- barplot(ttab,
         main = "Odczuwanie radości, w zależności od rodzaju diety",
         xlab="Rodzaj diety",
         ylab="Procentowy rozkład poczucia radości",
@@ -272,6 +276,7 @@ legend("topright",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
        fill = colf(7),
        cex=0.9)
+barlabels(bar, ttab_round)
 ```
 
 ## Hipoteza III
@@ -310,8 +315,9 @@ tabelka <- tabular((`Niepokój` = dane$niepokoj)~  Format(digits =2)*(`Liczba bl
 ```{r hipoteza 3 barplot}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 ttab <- prop.table(table(dane$niepokoj, dane$liczba_osob_kontakty), margin = 2)*100
+ttab_round <- round(ttab,2)
 
-barplot(ttab,
+bar <- barplot(ttab,
         main = "Odczuwanie niepokoju, w zależności od liczby bliskich znajomych",
         xlab="Liczba osób, z którymi utrzymuje się regularny kontakt",
         ylab="Procentowy rozkład poczucia radości",
@@ -323,6 +329,7 @@ legend("topright",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
        fill = colf(7),
        cex=0.9)
+barlabels(bar, ttab_round)
 ```
 
 ```{r hipoteza 3 korelacje}
@@ -381,8 +388,8 @@ tabelka <- tabular((`Poczucie uzależnienia` = dane$poczucie_uzaleznienia_urzadz
 ```{r hipoteza 4 barplot}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 ttab <- prop.table(table(dane$poczucie_uzaleznienia_urzadzenia, dane$godziny_rozrywki_urzadzenia), margin = 2)*100
-
-barplot(ttab,
+ttab_round <- round(ttab,2)
+bar <- barplot(ttab,
         main = "Wykres zależności",
         xlab="Liczba godzin spędzonych na komputerze w celach rozrywkowych",
         ylab="Procentowy rozkład poczucia uzależnienia od urządzeń",
@@ -394,6 +401,7 @@ legend("topright",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
        fill = colf(7),
        cex=0.75)
+barlabels(bar, ttab_round)
 ```
 
 ```{r hipoteza 4 korelacje}
@@ -443,8 +451,8 @@ tabelka <- tabular((`Jakość snu` = dane$jakosc_snu)~  Format(digits =2)*(`Posi
 ```{r hipoteza 5 barplot}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 ttab <- prop.table(table(dane$jakosc_snu, dane$wyzn_pory_snu), margin = 2)*100
-
-barplot(ttab,
+ttab_round <- round(ttab,2)
+bar <- barplot(ttab,
         main = "Zależność między jakością snu a posiadaniem jego wyznaczonych pór",
         ylab="Rozkład procentowy jakości snu",
         col = colf(5),
@@ -455,6 +463,7 @@ legend("topright",
        legend = c("b.zła", "kiepska", "przeciętna", "dobra", "b.dobra"),
        fill = colf(5),
        cex=0.8)
+barlabels(bar, ttab_round)
 ```
 
 ```{r hipoteza 5 korelacje}
@@ -504,8 +513,8 @@ tabelka <- tabular((`Załamanie` = dane$zalamanie)~  Format(digits =2)*(`Liczba 
 ```{r hipoteza 6}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 ttab <- prop.table(table(dane$zalamanie, dane$godziny_sportu), margin = 2)*100
-
-barplot(ttab,
+ttab_round <- round(ttab,2)
+bar <- barplot(ttab,
         main = "Wykres zależności",
         xlab="Liczba godzin w tygodniu przeznaczonych na sport",
         ylab="Rozkład procentowy poczucia załamania",
@@ -517,6 +526,7 @@ legend("topright",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
        fill = colf(7),
        cex=0.8)
+barlabels(bar, ttab_round)
 ```
 
 ```{r hipoteza 6 korelacje}
@@ -566,8 +576,8 @@ tabelka <- tabular((`Dobry humor` = dane$dobry_humor)~  Format(digits =2)*(`Jako
 ```{r hipoteza 7 barplot}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 ttab <- prop.table(table(dane$dobry_humor, dane$jakosc_posilkow), margin = 2)*100
-
-barplot(ttab,
+ttab_round <- round(ttab,2)
+bar <- barplot(ttab,
         main = "Zależność pomiędzy jakością posiłków a dobrym humorem",
         ylab="Rozkład procentowy aktualnego humoru",
         col = colf(5),
@@ -578,6 +588,7 @@ legend("topright",
        legend = c("zły", "kiepski", "średni", "dobry", "b.dobry"),
        fill = colf(5),
        cex=0.95)
+barlabels(bar, ttab_round)
 ```
 
 ```{r hipoteza 7 korelacje}
